# dyslexic_readability_index

./: README.md  pyproject.toml  requirements.txt  setup.py
src/dyslexic_readability/: dyslexic_scores.py  example.py  main.py  readability_scores.py  utils.py
src/dyslexic_readability.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
